--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -956,6 +956,8 @@
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
+			<key>Set Local Environment Vars</key>
+			<true/>
 			<key>Shortcut</key>
 			<string></string>
 			<key>Show Status Bar</key>
@@ -1351,7 +1353,7 @@
 			<key>Guid</key>
 			<string>814DAE27-2202-4C2D-A9B3-B31CDE59090F</string>
 			<key>Has Hotkey</key>
-			<true/>
+			<false/>
 			<key>Horizontal Spacing</key>
 			<real>1</real>
 			<key>HotKey Characters</key>
@@ -1719,6 +1721,8 @@
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
+			<key>Set Local Environment Vars</key>
+			<true/>
 			<key>Shortcut</key>
 			<string></string>
 			<key>Silence Bell</key>
